изменил логику серверов, теперь 1 сервер на все игры игры создаются по мере надобности -нужно сделать выбор типа игры в командде -нужно добавить возможность захода с меню -добавить защиту, если игра создается но не зарегестрирована не создавать новые